Add java args to Dockerfile entrypoint