@@ -7,4 +7,4 @@ RUN gradle jar
 FROM gcr.io/distroless/java:11-debug
 
 COPY --from=builder /opt/jkk/build/libs/*.jar /opt/jkk/jkk.jar
-ENTRYPOINT ["java", "-jar", "/opt/jkk/jkk.jar"]
+ENTRYPOINT ["java", "--add-opens=java.base/java.lang=ALL-UNNAMED", "-jar", "/opt/jkk/jkk.jar"]
